Test-Project Tittle

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             </div>
     
             <div id="pwork1">
-                <h4>Responsive Redesign of the Chicago 
-                    Underwater Hockey Website</h4>
+                <h4>Update Project Tittle Here</h4>
                     <p class="workp">Expanding the website contect to encourage new members to sign up and provide a one-stop-shop with the resources and information that existing members need. </p>
                     <button class="learnmorebutton">VIEW PROJECT</button>
             </div>
