Updated hp logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header id="headergrid">
 
-        <a href="index.html"><img id="logo" src="images/Logo-2.png"></a> 
+        <a href="index.html"><img id="logo" src="images/bea-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
