--- a/mywork.html
+++ b/mywork.html
@@ -7,7 +7,7 @@
 
 <body>
     <header id="headergrid">
-        <a href="index.html"><img id="logo" src="images/bea-logo.png"></a> 
+        <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
