--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css.html/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 
 <body>
-    <header id="headergrid">
+<header id="headergrid">
 
-        <a href="index.html"><img id="logo" src="images/Logo-2.png"></a> 
+ <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
@@ -104,6 +105,8 @@
             </ul>
         </div>
     </footer>
+
+    <script src="js/index.js"></script>
 </body>
-<script src="js/index.js"></script>
+
 </html>
