--- a/skills.html
+++ b/skills.html
@@ -73,10 +73,13 @@
             </ul>
         </div>
         <div id="socialicons">
+            <h5 class="h5connect">Let's connect! </h5>
+                    <h6 class="h6connect">beatrizchalas@gmail.com</h6>
+            
             <ul>
-                <li class="socialitems"><img src="images/fb.png"></li>
-                <li class="socialitems"><img src="images/insta.png"></li>
-                <li class="socialitems"><img src="images/LinkedIn.png"></li>
+                <li class="socialitems"><img src="images/FB-white.png"></li>
+                <li class="socialitems"><img src="images/Insta-white.png"></li>
+                <li class="socialitems"><img src="images/Lin-white.png"></li>
             </ul>
         </div>
     </footer>
