--- a/uwh.html
+++ b/uwh.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css.html/style.css">
     <link rel="stylesheet" href="css.html/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
@@ -53,11 +55,10 @@
         <div class="container projectoverview">
           <h2>Project Overview</h2>
           <div class="row">
-            <div class="col"><img src="images/4-18.png"><h5>Pages of Content</h5>
-            </div>
-            <div class="col"><img src="images/5.png"><h5>Stakeholder Interviews</h5></div>
-            <div class="col"><img src="images/50.png"><h5>1 Survey with Over 50 Responses</h5></div>
-            <div class="col"><img src="images/3.png"><h5>Responsive Design Interations</h5></div>
+            <div class="col p-overview-number"><img src="images/4 to 18.png"></br><h5>Pages of Content</h5></div>
+            <div class="col"><img src="images/5.png"></br><h5>Stakeholder Interviews</h5></div>
+            <div class="col"><img src="images/50.png"></br><h5>1 Survey with Over 50 Responses</h5></div>
+            <div class="col"><img src="images/3.png"></br><h5>Responsive Design Interations</h5></div>
           </div>
     </div>
   </div>
@@ -72,7 +73,7 @@
       <div class="card-header" id="headingOne">
         <h2 class="mb-0">
           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-            <img role="button" class="numbers" src="images/Number1.png">RESEARCH >
+            <img role="button" class="numbers" src="images/Number1-blue.png">RESEARCH >
           </button>
         </h2>
       </div>
@@ -87,7 +88,7 @@
       <div class="card-header" id="headingTwo">
         <h2 class="mb-0">
           <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-           <img class="numbers" src="images/Number 2.png"> PROBLEM>
+           <img class="numbers" src="images/Number 2-blue.png"> PROBLEM>
           </button>
         </h2>
       </div>
@@ -101,7 +102,7 @@
       <div class="card-header" id="headingThree">
         <h2 class="mb-0">
           <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            <img class="numbers" src="images/Number 3.png"> IDEATION>
+            <img class="numbers" src="images/Number 3-blue.png"> IDEATION>
           </button>
         </h2>
       </div>
@@ -114,7 +115,7 @@
           <div class="card-header" id="headingFour">
             <h2 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                <img class="numbers" src="images/Number 4.png"> PROTOTYPE>
+                <img class="numbers" src="images/Number 4-blue.png"> PROTOTYPE>
               </button>
             </h2>
           </div>
@@ -128,6 +129,7 @@
   </div>
   </div>
   </div>
+
     <!--STEP 1-->  
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
@@ -136,11 +138,11 @@
       <img class="step" src="images/STEP 1.png">
       </div>
       <div class="col-lg-4">
-  <h3>Understanding the User’s </br>
+  <h3 class="h3-case-study">Understanding the User’s </br>
     Needs and Expectations</h3>
         </div>
     <div class="col-lg-6">
-      <p>Users  expected to find: calendar of events and practice schedule and locations, upcoming events, pricing, how to join and contact info, frequently asked questions, links to buy equipment, rules of the game and how to play, and more resources for beginners and advanced players</p>
+      <p class="p-intro">Users  expected to find: calendar of events and practice schedule and locations, upcoming events, pricing, how to join and contact info, frequently asked questions, links to buy equipment, rules of the game and how to play, and more resources for beginners and advanced players</p>
     </div>
   </div>
   </div>
@@ -175,10 +177,10 @@
       <img class="step" src="images/STEP 2.png">
       </div>
       <div class="col-lg-4">
-      <h3>Identifying The Problem</h3>
+      <h3 class="h3-case-study">Identifying The Problem</h3>
         </div>
     <div class="col-lg-6 ">
-     <p>New and prospective club members interested in underwater hockey got discouraged by the website’s lack of relevant information and inefficiency, which forced them to visit multiple online platforms to learn more about the sport and complete the sign-up process. The website presented heuristics and design principle issues like: Cluttered header, small and confusing logo, intrusive and oversized videos, inconsistent and misguided desing and links.</p> 
+     <p class="p-intro">New and prospective club members interested in underwater hockey got discouraged by the website’s lack of relevant information and inefficiency, which forced them to visit multiple online platforms to learn more about the sport and complete the sign-up process. The website presented heuristics and design principle issues like: Cluttered header, small and confusing logo, intrusive and oversized videos, inconsistent and misguided desing and links.</p> 
     </div>
   </div>
   </div>
@@ -203,10 +205,10 @@
       <img class="step" src="images/STEP 3.png">
       </div>
       <div class="col-lg-4">
-      <h3>How We Solved The Problem</h3>
+      <h3 class="h3-case-study">How We Solved The Problem</h3>
         </div>
     <div class="col-lg-6">
-     <p>Provided one centralized resource hub so new members will have a more pleasant experience and feel more motivated to sign up, more confident and prepared before their first practice, and ready to relax and enjoy the health and social benefits of the sport.</p> 
+     <p class="p-intro">Provided one centralized resource hub so new members will have a more pleasant experience and feel more motivated to sign up, more confident and prepared before their first practice, and ready to relax and enjoy the health and social benefits of the sport.</p> 
     </div>
   </div>
   </div>
@@ -226,13 +228,13 @@
     <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <h3>UI Improvements Proposal</h3>
+      <h3 class="h3-case-study">UI Improvements Proposal</h3>
       </div>
       <div class="col-lg-4">
-        <p>Redesign the header and navigation system, increase logo size or possibly redesign, remove social media words from the header, keep only the icons, add Instagram, reduce overall video size and eliminate auto play, add 101 guide or FAQs Section, add resources for beginners, intermediate and advanced players</p>
+        <p class="p-intro">Redesign the header and navigation system, increase logo size or possibly redesign, remove social media words from the header, keep only the icons, add Instagram, reduce overall video size and eliminate auto play, add 101 guide or FAQs Section, add resources for beginners, intermediate and advanced players</p>
         </div>
     <div class="col-lg-4">
-     <p> Add equipment resources and links, form for questions to the contact page, section for practice cancellation and reschedule, a calendar for events, games, tournaments, testimonials and reviews, updated images and videos, and re-purpose and create new content.</p> 
+     <p class="p-intro">Add equipment resources and links, form for questions to the contact page, section for practice cancellation and reschedule, a calendar for events, games, tournaments, testimonials and reviews, updated images and videos, and re-purpose and create new content.</p> 
     </div>
   </div>
   </div>
@@ -241,7 +243,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-        <h3>New Sitemap</br>From 4 to 18 web pages</h3></br>
+        <h3 >New Sitemap</br>From 4 to 18 web pages</h3></br>
           <img class="img-col4" src="images/uwh-site-map.png">
         </div>
         <div class="col-lg-4">
@@ -263,7 +265,7 @@
         <img class="step" src="images/STEP 4.png">
         </div>
         <div class="col-lg-8">
-        <h3>Branding and Style Guide Applied to</br> 
+        <h3 class="h3-case-study">Branding and Style Guide Applied to</br> 
           High-Fidelity Responsive Clickabe Prototype</h3>
           </div>
     </div>
@@ -291,7 +293,7 @@
         <img class="step" src="images/STEP 4.png">
         </div>
         <div class="col-lg-8">
-        <h3>Usability Testing Feedback </br>and Iterations </h3>
+        <h3 class="h3-case-study">Usability Testing Feedback </br>and Iterations </h3>
           </div>
     </div>
     </div>
@@ -316,7 +318,7 @@
         <div class="container">
       <div class="row">
           <div class="col-lg-8">
-          <h3>Feedback and Comments from Usability Testing Round  #3</h3>
+          <h3 class="h3-case-study">Feedback and Comments from Usability Testing Round  #3</h3>
             </div>
       </div>
       </div>
@@ -361,10 +363,10 @@
         <div class="container">
       <div class="row">
           <div class="col-lg-4">
-          <h3>Latest Homepage Iterations</h3>
+          <h3 class="h3-case-study">Latest Homepage Iterations</h3>
             </div>
             <div class="col-lg-3">
-              <P>Added Are you new here? section in place of the Connect with Us section. Some users were confused with this area, they thought it was the footer and didn’t scrolled passed this area.</P>
+              <p class="p-intro">Added Are you new here? section in place of the Connect with Us section. Some users were confused with this area, they thought it was the footer and didn’t scrolled passed this area.</P>
                 </div>
                 <div class="col-lg-3">
                   <img class="img-col6" src="images/uwh-new-hp-section.png">
@@ -375,9 +377,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-          <img class="img-col6" src="images/uwh-final-iterations.png">
-        </div>
-            <div class="col-lg-6">
+          <img class="img-col6-full" src="images/uwh-final-iterations.png">
+        </div> <div class="col-lg-6-">
             <h4>Completed Iterations</h4>
             <p>Changed connect with us on the homepage to “New Here section”. Removed “UWH Resources link/page. Made sure all dropdown links were clickable. Moved practice information higher up on the homepage. Resources moved to the bottom. Added secondary button on What the Puck section -- “How to Play”. Included “Rookie Clinic” as another item on the calendar. Added play icon to all videos.</p>
                 <P>New line of copy on the contact us page to makee it clear you won’t be spammed or  added to a list service. Less copy on the What the Puck section. Centered Chicago title in the header. Added quipment card missing copy. Contact Form titles - Name/email/etc - added above the boxes, not just inside them. UPDATED links that take you to a new page, make them instant instead of smart prototype. Made sure buttons went through the different states (default, active, hover. Included social links at the top of the page. Reordered about us dropdown.</P>
@@ -389,7 +390,7 @@
         <div class="container">
       <div class="row">
           <div class="col-lg-6">
-          <h3>Next Steps and Future Iterations</h3>
+          <h3 class="h3-case-study">Next Steps and Future Iterations</h3>
             </div>
             <div class="row">
             <div class="col-lg-12">
