--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 <body>
 <header id="headergrid">
 
- <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
+ <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
