--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 <header id="headergrid">
 
- <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
+ <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
@@ -21,7 +21,44 @@
             </ul>
         </div>
     </header>
-
+<div class="container">
+    <h1>Contact Bea</h1>
+      <form class="row g-3 contact-bea">
+        <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Name</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Last Name</label>
+            <input type="password" class="form-control" id="inputPassword4" placeholder="Last Name">
+          </div>
+        </br>
+        <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Email</label>
+          <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+        </div>
+        
+        <div class="col-md-6">
+          <label for="inputCity" class="form-label">City</label>
+          <input type="text" class="form-control" id="inputCity" placeholder="City">
+        </div>
+    </br>
+        <div class="col-md-6">
+          <label for="inputState" class="form-label">State</label>
+          <input type="text" class="form-control" id="inputState" placeholder="State">
+        
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label for="inputZip" class="form-label">Zip</label>
+          <input type="text" class="form-control" id="inputZip" placeholder="Zip">
+        </div>
+    </br>
+        <div class="col-12">
+          <button class="secondary-button">SEND</button>
+        </div>
+      </form>
+</div>
 
     <footer id="footergrid">
 
