--- a/mywork.html
+++ b/mywork.html
@@ -9,7 +9,7 @@
 
 <body>
     <header id="headergrid">
-        <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
+        <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
@@ -71,7 +71,7 @@
               <div class="row">
 
                 <div class="col"> <div id="imagework4">
-                    <img class="workimage" src="images/app-design.png"></div>
+                    <img class="workimage" src="images/mobile-app-design.png"></div>
                 </div>
                 <div class="col"> <div id="pwork4">
                     <h4>Group Travel Planning 
