--- a/uwh.html
+++ b/uwh.html
@@ -10,7 +10,7 @@
 <body>
     <header id="headergrid">
 
-        <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
+        <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
@@ -28,7 +28,7 @@
     </div>
   </div>
   
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron  jumbotron-fluid uwh">
       <div class="container color-white">
         <h2 class="h2-intro">Project Introduction</h2>
         <p class="p-intro">The Chicago Underwater Hockey is a non-profit organization that promotes inclusion and diversity in a healthy and social environment. Underwater hockey is a co-ed sport, with players aged 12 to 82. Because this sport is played in the water, it’s easy on the joints and helps keep people active and healthy. It’s also a great way for people to meet new friends and build relationships. The Chicago UWH team needs to acquire new members and increase members retention to keep this 62-year old club alive. The goal with this website redesign is to bring awareness to the little-known sport and to encourage Chicago residents to give it a try. So, let’s dive in!</p>
@@ -51,7 +51,7 @@
     </div>
      </br>
    <!--Project Overview--> 
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid uwh">
         <div class="container projectoverview">
           <h2>Project Overview</h2>
           <div class="row">
@@ -131,7 +131,7 @@
   </div>
 
     <!--STEP 1-->  
-  <div class="jumbotron jumbotron-fluid">
+  <div class="jumbotron jumbotron-fluid uwh">
     <div class="container">
   <div class="row">
     <div class="col-lg-2">
@@ -170,7 +170,7 @@
   </div>
   </br>
   <!--STEP 2 PROBLEM-->  
-  <div class="jumbotron jumbotron-fluid">
+  <div class="jumbotron jumbotron-fluid uwh">
     <div class="container">
   <div class="row">
     <div class="col-lg-2">
@@ -198,7 +198,7 @@
   </div>
   
   <!--STEP 3 IDEATION-->  
-  <div class="jumbotron jumbotron-fluid">
+  <div class="jumbotron jumbotron-fluid uwh">
     <div class="container">
   <div class="row">
     <div class="col-lg-2">
@@ -224,7 +224,7 @@
     </div>
   </div>
   </br>
-  <div class="jumbotron jumbotron-fluid">
+  <div class="jumbotron jumbotron-fluid uwh">
     <div class="container">
   <div class="row">
     <div class="col-lg-4">
@@ -258,7 +258,7 @@
     </div>
   
     <!--STEP 4 PROPOTYPE-->  
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid uwh">
       <div class="container">
     <div class="row">
       <div class="col-lg-2">
@@ -286,7 +286,7 @@
   </br>
   
     <!--STEP 5 TESTING-->  
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid uwh">
       <div class="container">
     <div class="row">
       <div class="col-lg-2">
@@ -314,7 +314,7 @@
   </br>
     <!--USER FEEDBACK-->  
       <!--STEP 5 TESTING-->  
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid uwh">
         <div class="container">
       <div class="row">
           <div class="col-lg-8">
@@ -359,7 +359,7 @@
   
   </br>
       <!--FINAL ITERATIONS-->  
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid uwh">
         <div class="container">
       <div class="row">
           <div class="col-lg-4">
@@ -386,7 +386,7 @@
         </div>
         </div>
       <!--NEXT STEPS-->  
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid uwh">
         <div class="container">
       <div class="row">
           <div class="col-lg-6">
