--- a/skills.html
+++ b/skills.html
@@ -2,80 +2,121 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="css.html/style.css">
 </head>
 
 <body>
     <header id="headergrid">
 
-        <a href="index.html"><img id="logo" src="images/new-logo.png"></a> 
+        <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a>
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
-                <a href="/aboutme.html"><li class="menuitems">About</li></a>
-                <a href="/skills.html"><li class="menuitems">Skills</li></a>
-                <a href="mywork.html"><li class="menuitems">Work</li></a>
-                <a href="/contact.html"><li class="menuitems">Contact</li></a>
+                <a href="/aboutme.html">
+                    <li class="menuitems">About</li>
+                </a>
+                <a href="/skills.html">
+                    <li class="menuitems">Skills</li>
+                </a>
+                <a href="mywork.html">
+                    <li class="menuitems">Work</li>
+                </a>
+                <a href="/contact.html">
+                    <li class="menuitems">Contact</li>
+                </a>
             </ul>
         </div>
     </header>
-     <!--  My UX Skills section coded using CSS flex -->
-    <section class="mySkills">
-        <div id="topsectionskillsgrid">
+    <!--  My UX Skills section coded using CSS flex -->
 
-            <div id="skillshero">
-                <img class="teamimage" src="images/team-work-bw.jpg">
+    <div class="jumbotron jumbotron-fluid skillsbg">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                <img class="teamimage img-fluid" src="images/team-work-bw.jpg">
             </div>
 
-            <div id="pskillshero">
-                <p class="shortbio">
-                    “I love working in teams and learning from others. It makes the job more fun and fullfilling.”
-                </p>
+            <div class="col-6 skillsbg">
+                    <h2 class="hskill">“I love working in teams and learning from others. It makes the job more fun and fullfilling.”</h2>
+            </div>
             </div>
         </div>
-        <h1>My UX Skills</h1>
-<div class="flexContainer">
-<div class="skill1">
-    <img class="skill1image" src="images/user-research.png">
-    <h3>User Research</h3>
-    <p>We gain an empathic understanding of our users through interviews and usability tests. This consits on creating a proto persona, running surveys, formulating interview questions, and conducting stakeholders and users interviews and tests. The main goal is to identify the users’ behavioral demographics, the traits or life experiences that influence their technology habits, and their frustrations and challenges, so we can define the their needs and expectations. </p>
+      </div>
+ 
 
-</div>
+        <div class="container con-padding">
+            <h1>My UX Skills</h1>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="skillimage" src="images/user-research.png">
+                </div>
+                <div class="col-lg-8">
+                    <h3>User Research</h3>
+                    <p> Gain an empathic understanding of the users through interviews and usability tests. This
+                        consits on creating a proto persona, running surveys, formulating interview questions, and
+                        conducting stakeholders and users interviews and tests. The main goal is to identify the users’
+                        behavioral demographics, the traits or life experiences that influence their technology habits,
+                        and their frustrations and challenges, so we can define the their needs and expectations. </p>
+                </div>
+            </div>
 
-<div class="skill2">
-    <img class="skill2image" src="images/problem-solving.png">
-    <h3>Problem Solving</h3>
-    <p>We generate ideas and brainstorm solutions to target our users' needs and painpoints gathered through the user research. During this process we also analyze the websites or interfaces for their use of design principles and heuristics. Common trends are identified using an affinity diagram and organized into a prioritization matrix of the users' wants and needs to know where to focus our efforts. We then move to card sorting and creating an inspiration board and a style guide that will direct our redesign. 
-    </p>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="skillimage" src="images/problem-solving.png">
+                </div>
+                <div class="col-lg-8">
+                    <h3>Problem Solving</h3>
+                    <p> Generate ideas and brainstorm solutions to target our users' needs and painpoints gathered
+                        through the user research. During this process we analyze the websites or interfaces for
+                        their use of design principles and heuristics. Common trends are identified using an affinity
+                        diagram and organized into a prioritization matrix of the users' wants and needs to know where
+                        to focus our efforts. We then move to card sorting and creating an inspiration board and a style
+                        guide that will direct our redesign.
+                    </p>
+                </div>
+            </div>
 
-</div>
+            <div class="row">
+                <div class="col-lg-4"><img class="skillimage" src="images/ui-design.png">
+                </div>
+                <div class="col-lg-8">
+                    <h3>User Interface Design</h3>
+                    <p> Execute the design solution from paper sketches to low-fidelity wireframe to high-fidelity
+                        prototype applying UX/UI best practices. We conduct multiple rounds of usability tests during
+                        the all the design phases, from wireframes to high-fidelity prototypes and interate on the
+                        design based on the testing feedback. After the design has been solidified, we apply the HTML,
+                        CSS, JQuery and JavaScript code and publish the interface. </p>
+                </div>
+            </div>
 
-<div class="skill3" >
-    <img class="skill3image" src="images/ui-design.png">
-    <h3>User Interface Design</h3>
-    <p>We execute the design solution from paper sketches to low-fidelity wireframe to high-fidelity prototype applying UX/UI best practices. We conduct multiple rounds of usability tests during the all the design phases, from wireframes to high-fidelity prototypes and interate on the design based on the testing feedback. After the design has been solidified, we apply the HTML, CSS, JQuery and JavaScript code and publish the interface. </p>
-</div>
+        </div>
 
-</div>
-
-
-    </section>
 
     <footer id="footergrid">
 
         <div id="footernavmenu">
-            
+
             <ul>
-                <a href="/aboutme.html"><li class="footermenuitems">About</li></a>
-                <a href="/skills.html"><li class="footermenuitems">Skills</li></a>
-                <a href="mywork.html"><li class="footermenuitems">Work</li></a>
-                <a href="/contact.html"><li class="footermenuitems">Contact</li></a>
+                <a href="/aboutme.html">
+                    <li class="footermenuitems">About</li>
+                </a>
+                <a href="/skills.html">
+                    <li class="footermenuitems">Skills</li>
+                </a>
+                <a href="mywork.html">
+                    <li class="footermenuitems">Work</li>
+                </a>
+                <a href="/contact.html">
+                    <li class="footermenuitems">Contact</li>
+                </a>
             </ul>
         </div>
         <div id="socialicons">
             <h5 class="h5connect">Let's connect! </h5>
-                    <h6 class="h6connect">beatrizchalas@gmail.com</h6>
-            
+            <h6 class="h6connect">beatrizchalas@gmail.com</h6>
+
             <ul>
                 <li class="socialitems"><img src="images/FB-white.png"></li>
                 <li class="socialitems"><img src="images/Insta-white.png"></li>
