hp updates and about page

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,46 +2,85 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css.html/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 
 <body>
-<header id="headergrid">
+    <header id="headergrid">
 
- <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a> 
+        <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
-                <a href="/aboutme.html"><li class="menuitems">About</li></a>
-                <a href="/skills.html"><li class="menuitems">Skills</li></a>
-                <a href="mywork.html"><li class="menuitems">Work</li></a>
-                <a href="/contact.html"><li class="menuitems">Contact</li></a>
+                <a href="/aboutme.html">
+                    <li class="menuitems">About</li>
+                </a>
+                <a href="/skills.html">
+                    <li class="menuitems">Skills</li>
+                </a>
+                <a href="mywork.html">
+                    <li class="menuitems">Work</li>
+                </a>
+                <a href="/contact.html">
+                    <li class="menuitems">Contact</li>
+                </a>
             </ul>
         </div>
     </header>
+
+    <div class="jumbotron jumbotron-fluid hp-hero">
+        <div class="container hero-container">
+            <h1 class="h1-homebio">ABOUT ME</h1>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="profileimage img-fluid" src="images/bea-google-cropped.jpg">
+                </div>
+                <div class="col-lg-8 bio-bg">
+                    <h2>A Citizen of the world!</h2>
+                    <p class="shortbio">
+                        Born in Dominican Republic, raised in Puerto Rico, living in Chicago- I am fluent in Spanish and English. I love visiting other countries and learning their cultures. I am a formally trained accountant with a passion for beautiful and functional design.
+                    </p>
+                    <h2 class="h2-resume">Take a look at My Resume!</h2>
+                    <button class="primary-button">MY RESUME</button>
+
+
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
     <footer id="footergrid">
 
         <div id="footernavmenu">
-            
+
             <ul>
-                <a href="/aboutme.html"><li class="footermenuitems">About</li></a>
-                <a href="/skills.html"><li class="footermenuitems">Skills</li></a>
-                <a href="mywork.html"><li class="footermenuitems">Work</li></a>
-                <a href="/contact.html"><li class="footermenuitems">Contact</li></a>
+                <a href="/aboutme.html">
+                    <li class="footermenuitems">About</li>
+                </a>
+                <a href="/skills.html">
+                    <li class="footermenuitems">Skills</li>
+                </a>
+                <a href="mywork.html">
+                    <li class="footermenuitems">Work</li>
+                </a>
+                <a href="/contact.html">
+                    <li class="footermenuitems">Contact</li>
+                </a>
             </ul>
         </div>
         <div id="socialicons">
-            <h5 class="h5connect">Let's connect! </h5>
-                    <h6 class="h6connect">beatrizchalas@gmail.com</h6>
-            
             <ul>
-                <li class="socialitems"><img src="images/FB-white.png"></li>
-                <li class="socialitems"><img src="images/Insta-white.png"></li>
-                <li class="socialitems"><img src="images/Lin-white.png"></li>
+                <li class="socialitems">
+                    <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+                </li>
+                <li class="socialitems"><img src="images/fb-dark.png"></li>
+                <li class="socialitems"><img src="images/insta-dark.png"></li>
+                <li class="socialitems"><img src="images/LinkedIn-dark.png"></li>
             </ul>
         </div>
     </footer>
