--- a/index.html
+++ b/index.html
@@ -32,17 +32,15 @@
 
     <div class="jumbotron jumbotron-fluid hp-hero">
         <div class="container hero-container">
-            <p class="shortbio">Hi, I'm Bea Harnois-</p>
-            <h1 class="h1homebio">An UX/UI practicioner inspired by user-centered design. </h1>
+            <h4>Hi, I'm Bea Harnois-</h4>
+            <h1 class="h1-homebio">An UX/UI practicioner inspired by user-centered design. </h1>
             <div class="row">
                 <div class="col-lg-4">
                     <img class="profileimage img-fluid" src="images/bea-harnois-round-profile.png">
                 </div>
                 <div class="col-lg-8 bio-bg">
                     <p class="shortbio">
-                        Driven by human needs, I collaborate with teams to make evidence-based and research-informed
-                        design decisions that solve complex problems and provide intuitive solutions that are alinged
-                        with the business goals and deliver engaging user experiences.
+                        Driven by human needs, I collaborate with teams to make evidence-based and research-informed design decisions that solve complex business problems and deliver intuitive solutions with engaging user experiences.
                     </p>
                     <h2 class="h2-resume">Take a look at My Resume!</h2>
                     <button class="primary-button">MY RESUME</button>
@@ -54,13 +52,19 @@
         </div>
     </div>
 
+    <div class="container-fluid case">
+       <div class="container"> 
+        <h1 class="h1-case">Case Studies</h1>
+        <img src="images/gray-bar.png">
+       </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
                 <div class="card" style="width: 30em;">
-                    <img src="images/responsive-web-design.png" class="card-img-top" alt="...">
+                    <img src="images/uwh-responsive-design.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">What the Puck!</h5>
+                      <h3 class="card-title">What the Puck!</h3>
                       <p class="card-text">Expanding the website contect to encourage new members to sign up and provide a one-stop-shop with the resources and information that existing members need.</p>
                       <a href="#" class="secondary-button">Learn More</a>
                     </div>
@@ -69,9 +73,9 @@
 
             <div class="col-lg-6">
                 <div class="card" style="width: 30rem;">
-                    <img src="images/web-design.png" class="card-img-top" alt="...">
+                    <img src="images/edu-responsive-web-design.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Where Can I Find...?</h5>
+                      <h3 class="card-title">Where Can I Find...?</h3>
                       <p class="card-text">Enhancing the user experience through proper information hierarchy, simplified navigation, and new aesthetic and minimalist responsive web design.</p>
                       <a href="#" class="secondary-button">Learn More</a>
                     </div>
@@ -81,66 +85,56 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="card" style="width: 30em;">
-                    <img src="images/app-designer.png" class="card-img-top" alt="...">
+                    <img src="images/pal-app-design.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">I Got You Pal!</h5>
+                      <h3 class="card-title">I Got You Pal!</h3>
                       <p class="card-text">An app to alleviate the challenges that pet owners face when keeping track of their pet’s medical records, grooming appointments, and overall wellness schedules.</p>
                       <a href="#" class="secondary-button">Learn More</a>
                     </div>
                   </div>
             </div>
-
             <div class="col-lg-6">
                 <div class="card" style="width: 30rem;">
-                    <img src="images/web-design.png" class="card-img-top" alt="...">
+                    <img src="images/travel-app-design.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Where Can I Find...?</h5>
-                      <p class="card-text">Enhancing the user experience through proper information hierarchy, simplified navigation, and new aesthetic and minimalist responsive web design.</p>
+                      <h3 class="card-title">Yes, Book It!</h3>
+                      <p class="card-text">An app to address the challenges and frustrations that people experince when making group travel plans, keeping track of the travel documents and other details associated with the process.</p>
                       <a href="#" class="secondary-button">Learn More</a>
                     </div>
                   </div>
             </div>
         </div>
-        <div id="view-all">
-            <button class="view-all-button">VIEW ALL PROJECTS</button>
+        <div class="view-all">
+            <button class="view-all-button">VIEW ALL CASE STUDIES</button>
         </div>
     </div>
 
 
                 
 
+    <div class="container">
+        <nav class="navbar justify-content-end">
+          <a class="navbar" href="#">
+            <img src="images/Top.png" alt="">
+          </a>
+        </nav>
+        <nav class="navbar">
+          <nav class="navbar-brand">
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+          </nav>
+          <nav class="navbar justify-content-end">
+            <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+            <a class="nav-link" href="#"><img src="images/fb.png"></a>
+            <a class="nav-link" href="#"><img src="images/insta.png"></a>
+            <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+          </nav>
+        </nav>
+      </div>
 
-        <footer id="footergrid">
-
-            <div id="footernavmenu">
-
-                <ul>
-                    <a href="/aboutme.html">
-                        <li class="footermenuitems">About</li>
-                    </a>
-                    <a href="/skills.html">
-                        <li class="footermenuitems">Skills</li>
-                    </a>
-                    <a href="mywork.html">
-                        <li class="footermenuitems">Work</li>
-                    </a>
-                    <a href="/contact.html">
-                        <li class="footermenuitems">Contact</li>
-                    </a>
-                </ul>
-            </div>
-            <div id="socialicons">
-                <h5 class="h5connect">Let's connect! </h5>
-                <h6 class="h6connect">beatrizchalas@gmail.com</h6>
-
-                <ul>
-                    <li class="socialitems"><img src="images/FB-white.png"></li>
-                    <li class="socialitems"><img src="images/Insta-white.png"></li>
-                    <li class="socialitems"><img src="images/Lin-white.png"></li>
-                </ul>
-            </div>
-        </footer>
-
+       
 
         <script src="js/index.js"></script>
 </body>
