--- a/mywork.html
+++ b/mywork.html
@@ -9,7 +9,7 @@
 
 <body>
     <header id="headergrid">
-        <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a> 
+        <a href="index.html"><img id="logo" src="images/B-logo.png"></a> 
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
@@ -23,7 +23,7 @@
 
 
         <div class="container">
-            <h1>My Work</h1>
+            <h1>MY CASE STUDIES</h1>
 
 
             <div class="row">
@@ -103,14 +103,14 @@
             </ul>
         </div>
         <div id="socialicons">
-            <h5 class="h5connect">Let's connect! </h5>
-                    <h6 class="h6connect">beatrizchalas@gmail.com</h6>
-            
-            <ul>
-                <li class="socialitems"><img src="images/FB-white.png"></li>
-                <li class="socialitems"><img src="images/Insta-white.png"></li>
-                <li class="socialitems"><img src="images/Lin-white.png"></li>
-            </ul>
+           
+                    <ul>
+                        <li class="socialitems">
+                        <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6></li>
+                        <li class="socialitems"><img src="images/fb-dark.png"></li>
+                        <li class="socialitems"><img src="images/insta-dark.png"></li>
+                        <li class="socialitems"><img src="images/LinkedIn-dark.png"></li>
+                    </ul>
         </div>
     </footer>
 
