--- a/skills.html
+++ b/skills.html
@@ -10,7 +10,7 @@
 <body>
     <header id="headergrid">
 
-        <a href="index.html"><img id="logo" src="images/green-bg-logo.png"></a>
+        <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
 
         <div id="navmenu">
             <ul class="rightalignnavigation">
@@ -47,7 +47,7 @@
  
 
         <div class="container con-padding">
-            <h1>My UX Skills</h1>
+            <h1>My UX/UI Skills</h1>
             <div class="row">
                 <div class="col-lg-4">
                     <img class="skillimage" src="images/user-research.png">
@@ -115,12 +115,12 @@
         </div>
         <div id="socialicons">
             <h5 class="h5connect">Let's connect! </h5>
-            <h6 class="h6connect">beatrizchalas@gmail.com</h6>
+            <h6 class="h6connect">beaharnois@me.com</h6>
 
             <ul>
-                <li class="socialitems"><img src="images/FB-white.png"></li>
-                <li class="socialitems"><img src="images/Insta-white.png"></li>
-                <li class="socialitems"><img src="images/Lin-white.png"></li>
+                <li class="socialitems"><img src="images/fb-dark.png"></li>
+                <li class="socialitems"><img src="images/insta-dark.png"></li>
+                <li class="socialitems"><img src="images/LinkedIn-dark.png"></li>
             </ul>
         </div>
     </footer>
